--- a/package.json
+++ b/package.json
@@ -1,42 +1,22 @@
 {
-  "name": "gioper",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.5.0",
-    "@material-ui/icons": "^4.5.1",
-    "pigeon-maps": "^0.14.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-markdown": "^4.2.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.0.1"
-  },
+  "name": "gioper-site",
+  "version": "1.0.0",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gioper86/gioper-site.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "author": "Giovanni Perna",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/gioper86/gioper-site/issues"
   },
-  "devDependencies": {
-    "chalk": "^3.0.0",
-    "progress-bar-webpack-plugin": "^1.12.1",
-    "shortid": "^2.2.15",
-    "webpack-bundle-analyzer": "^3.6.0"
+  "homepage": "https://github.com/gioper86/gioper-site#readme",
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
