--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint 'src/**/*.jsx' "
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,6 +36,11 @@
   },
   "devDependencies": {
     "chalk": "^3.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.2.1",
     "progress-bar-webpack-plugin": "^1.12.1",
     "shortid": "^2.2.15",
     "webpack-bundle-analyzer": "^3.6.0"
